@@ -2660,6 +2660,31 @@ float Mob::FindGroundZ(float new_x, float new_y, float z_offset)
 	return ret;
 }
 
+// Copy of above function that isn't protected to be exported to Perl::Mob
+float Mob::GetGroundZ(float new_x, float new_y, float z_offset)
+{
+	float ret = -999999;
+	if (zone->zonemap != 0)
+	{
+		NodeRef pnode = zone->zonemap->SeekNode( zone->zonemap->GetRoot(), new_x, new_y );
+		if (pnode != NODE_NONE)
+		{
+			VERTEX me;
+			me.x = new_x;
+			me.y = new_y;
+			me.z = z_pos+z_offset;
+			VERTEX hit;
+			FACE *onhit;
+			float best_z = zone->zonemap->FindBestZ(pnode, me, &hit, &onhit);
+			if (best_z != -999999)
+			{
+				ret = best_z;
+			}
+		}
+	}
+	return ret;
+}
+
 //helper function for npc AI; needs to be mob:: cause we need to be able to count buffs on other clients and npcs
 int Mob::CountDispellableBuffs()
 {
